--- a/examendiseno/docker-compose.yml
+++ b/examendiseno/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     stdin_open: true
     volumes:
       # primero creamos el contenedor asi
-      - .\vite:/app
+      - .\vite\vite-project:/app
       # después de ejecutar el comando npm run dev volvemos a levantar el contendor usando este volumnen
       #- .\vite\vite-project:/app
     
